remove fake ai fallbacks and localhost cors